Source/WebCore/html/HTMLElement.h
@@ -86,8 +86,6 @@ public:
 
     HTMLFormElement* form() const { return virtualForm(); }
 
-    HTMLFormElement* findFormAncestor() const;
-
     bool hasDirectionAuto() const;
     TextDirection directionalityIfhasDirAutoAttribute(bool& isAuto) const;
 
